src/objects/ints__EfxReport_Collection__c.object
<CustomObject>
    <fields>
        <fullName>ints__AccountNumberAndOrName__c</fullName>
        <label>AccountNumberAndOrName</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__BalanceAmount__c</fullName>
        <label>BalanceAmount</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Code__c</fullName>
        <label>Code</label>
        <length>2</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__CustomerNumber__c</fullName>
        <label>CustomerNumber</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__DateOfLastPayment__c</fullName>
        <label>DateOfLastPayment</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__EfxReport__c</fullName>
        <label>EfxReport</label>
        <referenceTo>ints__EfxReport__c</referenceTo>
        <relationshipName>EfxReportCollections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__LedgerNumber__c</fullName>
        <label>LedgerNumber</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__OriginalAmount__c</fullName>
        <label>OriginalAmount</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__description__c</fullName>
        <label>description</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>EfxReport Collection</label>
    <nameField>
        <displayFormat>EFX_COL-{000000000}</displayFormat>
        <label>EfxReport Collection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EfxReport Collections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>